# svg2fbf

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEVELOPMENT.md  JUST COMMANDS FOR THIS PROJECT.md  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml  e2e.yml  quality.yml
FBF.SVG/: COMPARISON_TABLE.md  comparison_table.xlsx
ccpm/: plugin.json
ccpm/agent-skills/: uv-comprehensive-guide.md  uv-tool-management.md
ccpm/skills/: promotion-rules.md
docs/: RELEASE_WORKFLOW.md
scripts/: SETUP.md  release.sh  setup-branch-protection.sh
src/: svg2fbf.py  svg2fbf.py.backup  svg_viewbox_repair.py
tests/: conftest.py
tests/sessions/: index.json
tests/sessions/session_001_2frames/: metadata.json
tests/sessions/session_002_3frames/: metadata.json
tests/sessions/session_003_15frames/: metadata.json
tests/sessions/session_004_2frames/: metadata.json
tests/sessions/session_005_3frames/: metadata.json
tests/sessions/session_006_15frames/: metadata.json
tests/sessions/session_007_2frames/: metadata.json
tests/sessions/session_008_3frames/: metadata.json
tests/sessions/session_009_15frames/: metadata.json
tests/sessions/session_010_2frames/: metadata.json
tests/sessions/session_011_2frames/: metadata.json
tests/sessions/session_012_3frames/: metadata.json
tests/sessions/session_013_15frames/: metadata.json
tests/sessions/session_014_2frames/: metadata.json
tests/sessions/session_015_3frames/: metadata.json
tests/sessions/session_016_15frames/: metadata.json
tests/sessions/session_017_2frames/: metadata.json
tests/sessions/session_018_3frames/: metadata.json
tests/sessions/session_019_15frames/: metadata.json
tests/sessions/session_020_2frames/: metadata.json
tests/sessions/session_021_3frames/: metadata.json
tests/sessions/session_022_15frames/: metadata.json
tests/sessions/session_023_2frames/: metadata.json
tests/sessions/session_024_3frames/: metadata.json
tests/sessions/session_025_15frames/: metadata.json
tests/sessions/test_session_001_8frames/: session_metadata.json  test_generation_card.yaml
tests/sessions/test_session_002_4frames/: session_metadata.json  test_generation_card.yaml
tests/sessions/test_session_003_2frames/: session_metadata.json  test_generation_card.yaml
tests/sessions/test_session_003_2frames/runs/20251111_171306/: comparison_report.html  generation_card.yaml  test_result.json
tests/sessions/test_session_004_3frames/: session_metadata.json
tests/sessions/test_session_004_3frames/runs/20251111_070328/: comparison_report.html  test_result.json
tests/sessions/test_session_004_3frames/runs/20251111_171202/: generation_card.yaml
tests/sessions/test_session_005_3frames/: session_metadata.json
tests/sessions/test_session_006_3frames/: session_metadata.json
tests/sessions/test_session_007_4frames/: session_metadata.json
tests/sessions/test_session_008_2frames/: session_metadata.json
tests/sessions/test_session_008_2frames/runs/20251111_170248/: comparison_report.html  generation_card.yaml  test_result.json
tests/sessions/test_session_008_2frames/runs/20251111_171118/: comparison_report.html  test_result.json
tests/sessions/test_session_008_2frames/runs/20251111_171426/: comparison_report.html  test_result.json
tests/sessions/test_session_008_2frames/runs/20251111_171731/: comparison_report.html  test_result.json
tests/sessions/test_session_008_2frames/runs/20251111_171946/: comparison_report.html  test_result.json
tests/sessions/test_session_009_2frames/: session_metadata.json
tests/sessions/test_session_009_2frames/runs/20251111_043026/: generation_card.yaml
tests/sessions/test_session_010_4frames/: session_metadata.json
tests/sessions/test_session_011_1frames/: session_metadata.json
tests/sessions/test_session_011_1frames/runs/20251111_065631/: generation_card.yaml
tests/sessions/test_session_012_9frames/: session_metadata.json
tests/sessions/test_session_013_20frames/: session_metadata.json
tests/sessions/test_session_013_20frames/input_frames/dependencies/: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  CROSS_PLATFORM_TEMP_DIRS.md  DEVELOPER_WORKFLOW.md  README.md  justfile  pyproject.toml
tests/sessions/test_session_013_20frames/runs/20251111_074202/: comparison_report.html  generation_card.yaml  test_result.json
