[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.wheel.shared-data]
"tests/node_scripts" = "share/svg2fbf/node_scripts"
"tests/package.json" = "share/svg2fbf/package.json"

[project]
name = "svg2fbf"
version = "0.1.2a12"
description = "SVG Frame-by-Frame Animation Generator - Create optimized FBF SVG animations from SVG sequences"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Emasoft", email = "713559+Emasoft@users.noreply.github.com" },
]
maintainers = [
    { name = "Emasoft", email = "713559+Emasoft@users.noreply.github.com" },
]
keywords = [
    "svg",
    "animation",
    "fbf",
    "frame-by-frame",
    "smil",
    "vector-animation",
    "mesh-gradient",
    "svg2fbf",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "Topic :: Multimedia :: Graphics :: Editors :: Vector-Based",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "lxml>=6.0.2",
    "numpy>=2.2.0",
    "pyyaml>=6.0",
    "tomli>=2.3.0",
    "tomli-w>=1.2.0",
]

[project.license]
text = "Apache-2.0"

[project.urls]
Homepage = "https://github.com/Emasoft/svg2fbf"
Documentation = "https://github.com/Emasoft/svg2fbf#readme"
Repository = "https://github.com/Emasoft/svg2fbf.git"
Issues = "https://github.com/Emasoft/svg2fbf/issues"
Changelog = "https://github.com/Emasoft/svg2fbf/blob/main/CHANGELOG.md"

[project.scripts]
svg2fbf = "src.svg2fbf:cli"
svg-repair-viewbox = "src.svg_viewbox_repair:cli"

[dependency-groups]
dev = [
    "black>=25.9.0",
    "mypy>=1.18.2",
    "pillow>=10.0.0",
    "pre-commit>=4.0.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=6.0.0",
    "requests>=2.31.0",
    "ruff>=0.14.3",
    "tomli>=2.3.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "twine>=6.0.0",
    "watchdog>=6.0.0",
]

[tool.pytest.ini_options]
tmp_path_retention_count = 3
tmp_path_retention_policy = "failed"
addopts = "    --basetemp=/tmp/pytest-svg2fbf\n    --html-report\n    --image-tolerance=0.04\n    --pixel-tolerance=0.0039\n    --max-frames=50\n    -v\n"
minversion = "6.0"
testpaths = [
    "tests",
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.svg2fbf.test]
image_tolerance = 0.05
pixel_tolerance = 0.004
max_frames = 50
fps = 1.0
animation_type = "once"
precision_digits = 28
precision_cdigits = 28
frame_number_format = "frame{:05d}.svg"
create_session_encoding = "utf-8"
default_frames = 2
recursive = false  # Default: scan root level only (not subdirectories)

[tool.ruff]
line-length = 88  # Black's default
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort (import sorting like Black)
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "COM",  # flake8-commas (enforces trailing commas like Black!)
]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "COM812", # Trailing comma missing (can conflict with formatter)
    "COM819", # Trailing comma prohibited
]

[tool.ruff.format]
quote-style = "double"              # Black uses double quotes
indent-style = "space"              # Black uses spaces (4)
skip-magic-trailing-comma = false  # Respect Black's trailing comma behavior
line-ending = "auto"                # Auto-detect (or use "lf" for Unix)
docstring-code-format = true        # Format code in docstrings (Black does this)
docstring-code-line-length = 88     # Match line-length for docstring code

[tool.ruff.lint.isort]
# Make isort behavior match Black
force-single-line = false
force-wrap-aliases = false
split-on-trailing-comma = true

[tool.black]
line-length = 88  # Keep Black config in sync
target-version = [
    "py310",
    "py311",
    "py312",
]
skip-string-normalization = false

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[tool.coverage.run]
source = [
    "src/svg2fbf.py",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
